<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administracion">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/b2"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="163dp">

        <Button
            android:id="@+id/verProductos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="60dp"
            android:onClick="verProductos"
            android:text="@string/verListaproductos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/productNameEditText"
            android:layout_width="244dp"
            android:layout_height="48dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="add"
            android:foregroundTint="@color/white"
            android:hint="@string/nombreProducto"
            android:inputType="text"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.275"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/marcaProductoEditText"
            android:layout_width="207dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="add"
            android:hint="@string/marcaProducto"
            android:inputType="text"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productNameEditText" />

        <EditText
            android:id="@+id/precioProductoEditText3"
            android:layout_width="207dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="add"
            android:hint="@string/precioProducto"
            android:inputType="numberDecimal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/marcaProductoEditText" />

        <EditText
            android:id="@+id/cantidadProductoEditText4"
            android:layout_width="207dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="add"
            android:hint="@string/cantidadProducto"
            android:inputType="number"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/precioProductoEditText3" />

        <Button
            android:id="@+id/registroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="newProduct"
            android:text="@string/registrarProducto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cantidadProductoEditText4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="571dp" />

        <TextView
            android:id="@+id/hyperlinkTextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="76dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="salirM"
            android:text="@string/desloguear"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registroButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>